--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "A simple Clock with HTML-Elements, plain JavaScript and CSS.",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "babel-preset-minify": "^0.5.1",
     "concurrently": "^5.3.0",
+    "live-server": "^1.1.0",
     "sass": "^1.32.11"
   },
   "scripts": {
